inital cleanup - gradle wrapper to 8.6 instead of RC version - removed all proguard rules - removed org.lsposed.lsparanoid obfuscation - removed markdown tips - removed loading markdown tips from another server - removed release apk from source - removed server jar(apk) from source

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,8 +1,6 @@
 
 
 apply plugin: 'com.android.application'
-apply plugin: 'org.lsposed.lsparanoid'
-
 android {
     namespace 'org.server.scrcpy'
 
@@ -24,9 +22,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
+            minifyEnabled false
         }
     }
 
@@ -56,12 +52,9 @@ android {
     }
 }
 
-
-
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.13.2'
 }
 
-apply from: "$project.rootDir/config/android-checkstyle.gradle"
+//apply from: "$project.rootDir/config/android-checkstyle.gradle"
 
