--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,14 @@ apply plugin: 'com.android.application'
 
 android {
     namespace 'org.client.scrcpy'
-    // flavorDimensions "default"
     flavorDimensions = ["default"]
 
     compileSdkVersion 31
     defaultConfig {
-        applicationId "org.client.scrcpy"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 7
-        versionName "1.0.3"
+        versionCode 8
+        versionName "1.0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "scrcpy")
     }
@@ -31,7 +29,7 @@ android {
 }
 
 dependencies {
-    // implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation project(':server')
     implementation 'com.tananaev:adblib:1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
