fix gradle race condition with two dependsOn in app from server

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,21 +30,18 @@ android {
     def gradleCommand = file('../gradlew').exists() ? '../gradlew' : 'gradle'
 
     task buildServer(type: Exec) {
-        // Determine the build type from a project property or default to 'Debug'
         def buildType = project.hasProperty('buildType') ? project.buildType : 'Debug'
         def assembleTask = "assemble${buildType}"
         commandLine gradleCommand, ":server:${assembleTask}"
     }
 
     tasks.whenTaskAdded { task ->
-        if (task.name == 'assembleDebug' || task.name == 'assembleRelease') {
-            task.dependsOn buildServer
-        }
+        task.dependsOn buildServer
+        task.dependsOn ":server:copyServer"
     }
 }
 
 dependencies {
-    implementation 'com.tananaev:adblib:1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
