--- a/server/build.gradle
+++ b/server/build.gradle
@@ -29,11 +29,17 @@ android {
     task copyServer(dependsOn: 'deleteServer', type: Copy) {
         def release_file='build/outputs/apk/release/server-release-unsigned.apk'
         def debug_file='build/outputs/apk/debug/server-debug.apk'
+        def debug_file2='build/intermediates/apk/debug/server-debug.apk'
         def file_dest='../app/src/main/assets/'
         def buildType = project.hasProperty('buildType') ? project.buildType : 'Debug'
         if(buildType == "Debug"){
-            from file(debug_file)
-            into file(file_dest)
+            if(new File(debug_file).exists()){
+                from file(debug_file)
+                into file(file_dest)
+            } else {  // fix android studio run
+                from file(debug_file2)
+                into file(file_dest)
+            }
         }else{
             from file(release_file)
             into file(file_dest)
