--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,7 +20,25 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Decode Keystore
+      env:
+        ENCODED_STRING: ${{ secrets.SIGNING_KEY }}  # Uses the encoded signing key stored in GitHub Secrets.
+      run: |
+        echo $ENCODED_STRING | base64 -di > app/scrcpy.jks
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew assembleScrcpyRelease
+      env:
+        SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+        SIGNING_KEY_ALIAS: ${{ secrets.ALIAS }}
+        SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+
+    - name: Upload Signed Release APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: ScrcpyForAndroid-signed-release
+        path: |
+          app/build/outputs/apk/scrcpy/release/*.apk
+        retention-days: 90  # Sets the artifact retention period to 90 days.
